--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
                     <!--
                     <useUnlimitedThreads>true</useUnlimitedThreads>
 -->
-                    <threadCount>1</threadCount>
-                    <perCoreThreadCount>false</perCoreThreadCount>
+                    <threadCount>2</threadCount>
+                    <perCoreThreadCount>true</perCoreThreadCount>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/CukesRunner*.java</include>
